package com.mirodeon.tictactoebnp

enum class Player {
    X,
    O
}